[project]
name = "promocoes"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Benvenuti",email = "mateusjbenvenuti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=1.4.0,<3)",
    "streamlit (>=1.54.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "promocoes", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
